--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <title>The Gentleman</title>
 
       <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
+      <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Sanchez:400,400italic' rel='stylesheet' type='text/css'>
       <script src="https://use.fontawesome.com/6013be0e09.js"></script>
 
       <link rel="stylesheet" href="css/grid-system.css">
@@ -60,7 +61,7 @@
                   <img src="img/header.png" alt="ciudad">  
                </div>
                <div class="col-4">
-                  <h1>The Gentleman is Wordepress has Actitud!</h1>
+                  <h1>The Gentleman is Wordepress Themes has Actitud!</h1>
                   <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis cumque, provident illo. Itaque quos, architecto ad tempore minus, saepe repudiandae libero voluptatem unde. Magni ducimus mollitia culpa ipsum explicabo, aut.</p>
                   <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque nobis sed, natus omnis officiis, ipsa a cupiditate, quas cumque voluptatem ut dolorum dignissimos itaque expedita illum blanditiis facilis modi soluta.</p>
                   <div class="text-center text-white red-mor pt-5 mt-5">
@@ -85,42 +86,102 @@
                <div class="row pt-5"> <!-- PRIMERA ROW -->
                   <div class="col-6">
                      <img class="w-100" src="img/main-pic.png" alt="chica">
-                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
+                        <div class="row">
+                           <div class="col-8">
+                              <h3>Lorem ipsum dolor sit amet</h3>
+                           </div>
+                           <div class="col-4 text-gray" align="right">
+                              <i class="fa fa-eye fa-lg inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">1596</p>
+                              <i class="fa fa-heart inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">175</p>
+                           </div>
+                        </div>
                      <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptas dolore itaque.</p>
                   </div>
                   <div class="col-6">
                      <img class="w-100" src="img/main-pic.png" alt="chica">
-                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
+                        <div class="row">
+                           <div class="col-8">
+                              <h3>Lorem ipsum dolor sit amet</h3>
+                           </div>
+                           <div class="col-4 text-gray" align="right">
+                              <i class="fa fa-eye fa-lg inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">1596</p>
+                              <i class="fa fa-heart inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">175</p>
+                           </div>
+                        </div>
                      <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptas dolore itaque.</p>
                   </div>
                </div>
-               <div class="row pt-5"> <!-- PRIMERA ROW -->
+               <div class="row pt-5"> <!-- SEGUNDA ROW -->
                   <div class="col-6">
                      <img class="w-100" src="img/main-pic.png" alt="chica">
-                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
+                        <div class="row">
+                           <div class="col-8">
+                              <h3>Lorem ipsum dolor sit amet</h3>
+                           </div>
+                           <div class="col-4 text-gray" align="right">
+                              <i class="fa fa-eye fa-lg inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">1596</p>
+                              <i class="fa fa-heart inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">175</p>
+                           </div>
+                        </div>
                      <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptas dolore itaque.</p>
                   </div>
                   <div class="col-6">
                      <img class="w-100" src="img/main-pic.png" alt="chica">
-                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
+                        <div class="row">
+                           <div class="col-8">
+                              <h3>Lorem ipsum dolor sit amet</h3>
+                           </div>
+                           <div class="col-4 text-gray" align="right">
+                              <i class="fa fa-eye fa-lg inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">1596</p>
+                              <i class="fa fa-heart inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">175</p>
+                           </div>
+                        </div>
                      <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptas dolore itaque.</p>
                   </div>
                </div>
-               <div class="row pt-5"> <!-- PRIMERA ROW -->
+               <div class="row pt-5"> <!-- TERCERA ROW -->
                   <div class="col-6">
                      <img class="w-100" src="img/main-pic.png" alt="chica">
-                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
+                        <div class="row">
+                           <div class="col-8">
+                              <h3>Lorem ipsum dolor sit amet</h3>
+                           </div>
+                           <div class="col-4 text-gray" align="right">
+                              <i class="fa fa-eye fa-lg inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">1596</p>
+                              <i class="fa fa-heart inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">175</p>
+                           </div>
+                        </div>
                      <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptas dolore itaque.</p>
                   </div>
                   <div class="col-6">
                      <img class="w-100" src="img/main-pic.png" alt="chica">
-                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
+                        <div class="row">
+                           <div class="col-8">
+                              <h3>Lorem ipsum dolor sit amet</h3>
+                           </div>
+                           <div class="col-4 text-gray" align="right">
+                              <i class="fa fa-eye fa-lg inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">1596</p>
+                              <i class="fa fa-heart inl-bloc" aria-hidden="true"></i>
+                              <p class="inl-bloc">175</p>
+                           </div>
+                        </div>
                      <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptas dolore itaque.</p>
                   </div>
                </div>
                <div class="pt-5 pb-5" align="center">
-                  <div class="text-center text-white red-mor pt-1">
-                     <p>Lead More</p>
+                  <div class="text-center red-mor pt-1">
+                     <a class="a-none-decoration text-white" href="#"><p class="">Lead More</p></a>
                   </div>
                </div>
                <hr>
@@ -132,11 +193,11 @@
                   <div class="col-3 pt-5" align="center">
                      <div class="text-center text-gray">
                         <i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
-                           <a class="a-none-decoration" href="#"><p class="red-mor2 text-center text-white pt-2">Follow</p></a>
+                           <a class="a-none-decoration " href="#"><p class=" red-mor2 text-center text-white pt-2">Follow</p></a>
                      </div>
                   </div>
-                  <div class="col-9 text-gray pt-10">
-                     <p>My lasted WordPress theme, The gentleman, just lunched! This Theme has attitud.Check it out at the ThemForest: <i><a class="pink" href="#">http://ods./asdfd</a> - 1 week ago</i> </p>
+                  <div class="col-9 text-gray pt-5">
+                     <p class="sanchez fz">My lasted WordPress theme, The gentleman, just lunched! This Theme has attitud.Check it out at the ThemForest: <i><a class="pink" href="#">http://ods./asdfd</a> - 1 week ago</i> </p>
                   </div>  
                </div>
             </section>
@@ -149,29 +210,29 @@
       <!-- primera row -->
          <div class="row">
             <div class="col-4 text-gray">
-               <h2>The <b>Gentleman</b></h2>
+               <p class="logo">The<b>Gentleman</b></p>
                <ul class="pt-2" align="left" >
-                  <li class="inline-block" >
+                  <li class="inline-block">
                      <a href="#">
                         <i class="fa fa-facebook fa-lg text-gray" aria-hidden="true"></i>
                      </a>
                   </li>
-                  <li class="inline-block pl-3">
+                  <li class="inline-block">
                      <a href="#">
                         <i class="fa fa-twitter fa-lg text-gray " aria-hidden="true"></i>
                      </a>
                   </li>
-                  <li class="inline-block pl-3">
+                  <li class="inline-block">
                      <a href="#">
                         <i class="fa fa-linkedin fa-lg text-gray" aria-hidden="true"></i>
                      </a>
                   </li>
-                  <li class="inline-block pl-3">
+                  <li class="inline-block">
                      <a href="#">
                         <i class="fa fa-pinterest fa-lg text-gray" aria-hidden="true"></i>
                      </a>
                   </li>
-                  <li class="inline-block pl-3">
+                  <li class="inline-block">
                      <a href="#">
                         <i class="fa fa-google-plus fa-lg text-gray" aria-hidden="true"></i>
                      </a>
@@ -179,9 +240,9 @@
                </ul>
             </div>
             <div class="col-4 text-center text-gray">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Consectetur odio, vero, modi sed tempore?</p>
+               <p class="sanchez">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Consectetur odio, vero, modi sed tempore?</p>
             </div>
-            <div class="col-4 text-gray pl-10 pb-5">
+            <div class="col-4 text-gray pl-10 pb-5 sanchez">
                <p class="pink">Web Design</p>
                <p>Brand Identity</p>
                <p>Web development</p>
@@ -224,7 +285,16 @@
                </div>
             </div>
             <div class="col-3 text-gray"><!-- segunda columna -->
-               <h4 class="pb-10 ">Twitter Updates</h4>
+               <div class="row">
+                  <div class="col-7">
+                     <h4 class="pb-10 ">Twitter Updates</h4>
+                  </div>
+                  <div class="col-5">
+                     <a class="a-none-decoration" href="#">
+                        <p class=" red-mor3 text-center text-white .footer-pp">Follow</p>
+                     </a>
+                  </div>
+               </div>
                <div class="row">
                   <div class="col-12 footer-p"> 
                      <p class="pb-5"><span class="pink">@OlivaStos</span> Lorem ipsum dolor sit amet, consectetur adipisicing... </p>
@@ -242,14 +312,14 @@
             </div>
             <div class="col-3 text-gray"><!-- tercera columna -->
                <h4 class="pb-10 ">Twitter Updates</h4>
-               <p class="footer-p">Lorem ipsum dolor sit amet. dolor sit</p>
+               <p class="footer-p sanchez">Lorem ipsum dolor sit amet. dolor sit</p>
                <p class="footer-pp">View on map</p>
                <p id="tel" class="pt-5 pink"> 1-800-275-2277</p>  
             </div> 
             <div class="col-3 text-gray"><!-- cuarta columna -->
-               <h4 class="pb-10 ">Newsletter</h4>
+               <h4 class="pb-5 ">Newsletter</h4>
                <input type="text" name="Email" size="70" placeholder="your email"/>
-               <p class="footer-pp"><i>we dont spam send this mail</i></p>
+               <p class="footer-pp pt-2"><i>we dont spam send this mail</i></p>
                <p class="footer-pp"><i>We design beautiful Wordpress Themes</i></p>
             </div>
          </div>
